deploy/k8s/ollama.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: llm-testing-waldur-com
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
        - name: ollama-model
          image: ghcr.io/jaxhend/llm-for-waldur/ollama:gemma3
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              nvidia.com/gpu: 1
          command: ["ollama", "serve"]

        - name: ollama-worker
          image: ghcr.io/jaxhend/llm-for-waldur/ollama_worker:latest
          imagePullPolicy: IfNotPresent
      tolerations:
        - key: nvidia.com/gpu
          operator: Exists
          effect: NoSchedule
